# backend/internal/core/domain/models/campaign.go
@@ -2,7 +2,7 @@ package models
 
 type Campaign struct {
 	ID                 int     `json:"id"`
-	BranchID           int     `json:"sucursal_id"`
+	BranchID           *int    `json:"sucursal_id"`
 	StartDate          string  `json:"fecha_inicio"`
 	EndDate            string  `json:"fecha_fin"`
 	PointsMultiplier   float64 `json:"multiplicador_puntos"`
